# Randy

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  PROJECT_PLAN.md  README.md  Randy.md  docker-compose.yml  pyproject.toml
deploy/systemd/: randy-web.service  randy.service
prompts/: expert_round1.md  expert_round2.md  facilitator_clarify.md  facilitator_synthesize.md
scripts/: deploy.sh  smoke.py
src/randy/: __main__.py  config.py
src/randy/experts/: __init__.py  expert.py
src/randy/memory/: __init__.py  profile.py  schema.sql  store.py
src/randy/orchestrator/: __init__.py  pipeline.py  profile_updater.py  runner.py
src/randy/personas/: __init__.py  registry.py
src/randy/personas/prompts/: contrarian.md  facilitator.md  operator.md  strategist.md
src/randy/providers/: __init__.py  anthropic_provider.py  base.py  cost_meter.py  deepseek_provider.py  google_provider.py  openai_provider.py  pricing.py
src/randy/research/: __init__.py  brave.py  fetcher.py  market.py  researcher.py
src/randy/telegram/: __init__.py  bot.py
src/randy/web/: __init__.py  __main__.py  app.py
src/randy/web/static/: style.css
src/randy/web/templates/: _profile_decisions_section.html  _profile_list_section.html  _profile_notes_section.html  _profile_things_tried_section.html  _progress_card.html  _result_card.html  base.html  conversation.html  facts.html  facts_topic.html  home.html  profile.html
tests/: test_cost_meter.py  test_personas.py  test_pricing.py  test_providers.py  test_research.py
